Added about and blog pages

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,6 +15,9 @@
                 <a href="/about/">About</a>
                 <a href="/blog/">Blog</a>
 
-		<h1>My Astro site</h1>
+		<h1>About Me</h1>
+                <h2>... and my new Astro site!</h2>
+                <p>I'm working thorugh Astros's introductory tutorial. This is the seconbd page on my web site and the fiorst I built myself.</p>
+                <p>This site will update as I complete more of the tutorial.</p>
 	</body>
 </html>
