--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 
 const pageTitle = "My Astro learning Blog"
@@ -14,15 +15,15 @@ const pageTitle = "My Astro learning Blog"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<Navigation />
-
+		<Header />
 		<h1>{pageTitle}</h1>
-                <h2>Astro Learning Blog</h2>
-                <p>This is where I will post about my journey learning Astro.</p>
-                <ul>
-                        <li><a href="/posts/post-1">Post 1</a></li>
-                        <li><a href="/posts/post-2">Post 2</a></li>
-                        <li><a href="/posts/post-3">Post 3</a></li>
-                </ul>
+		<h2>Astro Learning Blog</h2>
+		<p>This is where I will post about my journey learning Astro.</p>
+		<ul>
+				<li><a href="/posts/post-1">Post 1</a></li>
+				<li><a href="/posts/post-2">Post 2</a></li>
+				<li><a href="/posts/post-3">Post 3</a></li>
+		</ul>
+		<Footer />
 	</body>
 </html>
