--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,5 @@
 ---
-import '../styles/global.css';
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-
+import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "About Me";
 const identity = {
   firstName: "Peter",
@@ -16,52 +13,40 @@ const skills = ["HTML", "CSS", "JavaScript", "Go", "Astro", "Agile Methods"];
 const happy = true;
 const finsihed = false;
 const goal =3;
-
 const skillColor = "navy";
 const fontWeight = "bold";
 const textCase = "uppercase";
+
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>{pageTitle}</title>
-    <style define:vars={{skillColor, fontWeight, textCase}}>
-      h1 {
-        color: purple;
-        font-size: 4rem;
+<BaseLayout pageTitle={pageTitle} textCase={textCase}>
+	<style define:vars={{skillColor, fontWeight, textCase}}>
+   	.skill {
+      color:var(--skillColor);
+      font-weight: var(--fontWeight);
+      text-transform: var(--textCase)
       }
-      .skill {
-        color:var(--skillColor);
-        font-weight: var(--fontWeight);
-        text-transform: var(--textCase)
-      }
-    </style>
-  </head>
-	<body>
-		<Header />
-		<h1>{pageTitle}</h1>
-      <h2>... and my new Astro site!</h2>
-      <p>I'm working thorugh Astros's introductory tutorial. This is the seconbd page on my web site and the fiorst I built myself.</p>
-      <p>This site will update as I complete more of the tutorial.</p>
+  	</style>
 
-      <p>Here are some facts about me:</p>
-      <ul>
-              <li>My name is {identity.firstName}</li>
-              <li>I live in {identity.country} and I work as a {identity.occupation}</li>
-              {identity.hobbies.length >= 2 &&
-              <li>Two of my hobbies are {identity.hobbies[0]} and {identity.hobbies[1]}</li>
-              }
-      </ul>
-      <p>My skills are:</p>
-      <ul>
-              {skills.map((skill) => <li class = "skill">{skill}</li>)}
-      </ul>
+  	<h2>... and my new Astro site!</h2>
+	<p>I'm working thorugh Astros's introductory tutorial. This is the seconbd page on my web site and the fiorst I built myself.</p>
+	<p>This site will update as I complete more of the tutorial.</p>
 
-      {happy && <p>I am happy to be learning Astro!</p>}
-      {finsihed && <p>I finished this tutorial!</p>}
-      {goal === 3 ? <p>My goal is to finish in three days. </p> : <p>My goal is not three days.</p> }
-      <Footer />
-	</body>
-</html>
+	<p>Here are some facts about me:</p>
+	<ul>
+				<li>My name is {identity.firstName}</li>
+				<li>I live in {identity.country} and I work as a {identity.occupation}</li>
+				{identity.hobbies.length >= 2 &&
+				<li>Two of my hobbies are {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+				}
+	</ul>
+
+	<p>My skills are:</p>
+	<ul>
+		{skills.map((skill) => <li class = "skill">{skill}</li>)}
+	</ul>
+
+	{happy && <p>I am happy to be learning Astro!</p>}
+	{finsihed && <p>I finished this tutorial!</p>}
+	{goal === 3 ? <p>My goal is to finish in three days. </p> : <p>My goal is not three days.</p> }
+</BaseLayout>
