--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,22 +1,10 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import "../styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
 const pageTitle = "My Astro learning Blog"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<Header />
-		<h1>{pageTitle}</h1>
+<BaseLayout>
 		<h2>Astro Learning Blog</h2>
 		<p>This is where I will post about my journey learning Astro.</p>
 		<ul>
@@ -24,6 +12,4 @@ const pageTitle = "My Astro learning Blog"
 				<li><a href="/posts/post-2">Post 2</a></li>
 				<li><a href="/posts/post-3">Post 3</a></li>
 		</ul>
-		<Footer />
-	</body>
-</html>
+</BaseLayout>
