--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,7 @@ const identity = {
 const skills = ["HTML", "CSS", "JavaScript", "Go", "Astro", "Agile Methods"];
 
 const happy = true;
-const finsihed = false;
+const finsihed = true;
 const goal =3;
 const skillColor = "navy";
 const fontWeight = "bold";
