--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,15 @@ html {
   font-family: sans-serif;
 }
 
+html.dark {
+  background-color: #050f1c;
+  color: #e5e5e5;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
 body {
   margin: 0 auto;
   width: 100%;
